XInputExecutor: Rewrite to use FFM instead of jna