@@ -23,9 +23,11 @@ kotlin {
             implementation(libs.androidx.lifecycle.runtimeCompose)
             implementation(libs.kotlinx.serialization.json)
         }
+
         commonTest.dependencies {
             implementation(libs.kotlin.test)
         }
+
         jvmMain.dependencies {
             implementation(compose.desktop.currentOs)
             implementation(libs.kotlinx.coroutinesSwing)
@@ -33,12 +35,16 @@ kotlin {
             implementation("net.java.dev.jna:jna-platform:5.14.0")
         }
     }
+
+    jvmToolchain(22)
 }
 
 
 compose.desktop {
     application {
         mainClass = "io.github.padconnect.receiver.MainKt"
+
+        jvmArgs += listOf("--enable-native-access=ALL-UNNAMED")
 
         nativeDistributions {
             appResourcesRootDir.set(project.layout.projectDirectory.dir("src/jvmMain/resources"))
@@ -48,7 +54,11 @@ compose.desktop {
 
             windows {
                 console = true
+                iconFile.set(project.file("logos/icon.ico"))
+                upgradeUuid = "90f3c261-723f-454b-acc6-82756b665976"
             }
+
+            jvmArgs("--enable-native-access=ALL-UNNAMED")
         }
 
         buildTypes.release {
